crates/diagnosis/src/report/snapshots/diagnosis__report__tests__emit_report_single_line.snap
---
source: crates/diagnosis/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
[31merror[0m: expected semicolon
[34m>[0m test.mu:1
[34m|[0m 
[34m|[0m let x = 10[31;4m_[0m
[34m|[0m 

