crates/diagnosis/src/report/snapshots/diagnosis__report__tests__emit_report_single_line_no_color.snap
---
source: crates/diagnosis/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
error: expected semicolon
> test.mu:1
| 
| let x = 10_
| 

